# solana-pools-data-lib

./: .gitignore  Cargo.toml  GETTING_STARTED.md  INTEGRATION.md  README.md
examples/: README.md  all_pools_statistics.rs  backend_compatibility.rs  basic.rs  complete_config.rs  comprehensive.rs  data_organization.rs  data_samples.rs  delegation_states.rs  format_comparison.rs  pool_analysis.rs  production_formats.rs  quick_test.rs  rpc_configuration.rs  rpc_mapping.rs  start_here.rs  test_block_production.rs  troubleshooting.rs  validate_statistics.rs  validator_accounts.rs  validator_map.rs
src/: client.rs  config.rs  error.rs  lib.rs  main.rs  pools.rs  rpc.rs  statistics.rs  statistics_calc.rs  statistics_calc_tests.rs  types.rs
tmp/: sfdp.stake  validate_stake.py
