[package]
name = "solana-pools-data-lib"
version = "0.1.0"
edition = "2021"
authors = ["matsuro-hadouken"]
description = "Production-ready Rust library for fetching Solana stake pool data with three output formats for different use cases"
license = "MIT"
repository = "https://github.com/matsuro-hadouken/solana-pools-data-lib"
homepage = "https://github.com/matsuro-hadouken/solana-pools-data-lib"
documentation = "https://docs.rs/solana-pools-data-lib"
keywords = ["solana", "blockchain", "stake-pools", "rpc", "defi"]
categories = ["api-bindings", "cryptocurrency", "asynchronous"]
readme = "README.md"

[lib]
name = "solana_pools_data_lib"
path = "src/lib.rs"

[[bin]]
name = "pools-data-demo"
path = "src/main.rs"

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Async utilities
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# Rate limiting
governor = "0.10"
nonzero_ext = "0.3"

# Retry logic
tokio-retry = "0.3"

# Logging
log = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Lazy static initialization
once_cell = "1.0"

[dev-dependencies]
env_logger = "0.11.8"
tokio-test = "0.4"
