[package]
name = "solana-pools-data-lib"
version = "0.2.0"
edition = "2021"
authors = ["matsuro-hadouken"]
description = "Rust library for fetching Solana stake pool data with production and debug output formats"
license = "MIT"
repository = "https://github.com/matsuro-hadouken/solana-pools-data-lib"
documentation = "https://docs.rs/solana-pools-data-lib"
keywords = ["solana", "blockchain", "stake-pools", "rpc", "defi"]
categories = ["api-bindings", "cryptocurrency", "asynchronous"]
readme = "README.md"
rust-version = "1.75"
exclude = ["/target", "/.git", "/.github"]

[features]
default = []

[lib]
name = "solana_pools_data_lib"

[[bin]]
name = "pools-data-demo"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
governor = "0.10"
nonzero_ext = "0.3"
tokio-retry = "0.3"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.0"

[dev-dependencies]
env_logger = "0.11"
tokio-test = "0.4"
